Fix JumpDownButton being show in gallery view

--- a/scss/message/_message-list.scss
+++ b/scss/message/_message-list.scss
@@ -10,7 +10,7 @@
   background-color: var(--chatViewBg);
   overflow: hidden;
 
-  .unread-message-counter {
+  .jump-down-button {
     $heightUnreadCounter: 20px;
     $heightJumpToBottomButton: 40px;
     $width: 40px;
@@ -22,7 +22,7 @@
     bottom: $marginBottom;
     height: $heightUnreadCounter + $heightJumpToBottomButton;
     width: $width;
-    z-index: 100;
+    z-index: 10;
 
     .counter {
       position: relative;
@@ -39,7 +39,7 @@
       text-align: center;
     }
 
-    .jump-to-bottom-button {
+    .button {
       position: relative;
       z-index: 8;
 
@@ -54,7 +54,7 @@
       box-shadow: 0px 3px 5px #66666630;
 
       cursor: pointer;
-      .jump-to-bottom-icon {
+      .icon {
         height: $heightJumpToBottomButton;
         width: $width;
 
